2011-08-18  Chong Yidong  <cyd@stupidchicken.com>

	* international/characters.el: Add L and R categories.

	* subr.el (bidi-string-mark-left-to-right): Rename from
	string-mark-left-to-right.  Use category search.

	* buff-menu.el (Buffer-menu-buffer+size): Callers changed.

2011-08-18  Juri Linkov  <juri@jurta.org>

	* faces.el (error, warning, success): New faces with definitions
	copied from old default values of `font-lock-warning-face',
	`compilation-warning', `compilation-info' (bug#6117).

	* font-lock.el (font-lock-warning-face): Inherit from `error'.

	* progmodes/compile.el (compilation-error): Inherit from `error'.
	(compilation-warning): Inherit from `warning'.
	(compilation-info): Inherit from `success'.

	* dired.el (dired-marked): Inherit from `warning'.
	(dired-flagged): Inherit from `error'.

2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (auth-source): Require to avoid problems with
	binding variables (bug#9298).  Also clean up some unused
	autoloads.

	* net/network-stream.el (network-stream-open-starttls): Support
	using starttls.el without using gnutls-cli.

2011-08-17  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (rgrep): Handle the case when
	`grep-find-command' is a cons cell (bug#9278).

2011-08-17  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-pop-up-frame): Run frame creation
	function with BUFFER current (as special-display-popup-frame
	does).  Reported by Drew Adams.

2011-08-17  Daiki Ueno  <ueno@unixuser.org>

	* epa-mail.el: Simplify GnuPG group expansion using
	epg-expand-group.
	(epa-mail-group-alist, epa-mail-group-modtime)
	(epa-mail-gnupg-conf-file, epa-mail-parse-groups)
	(epa-mail-sync-groups, epa-mail-expand-recipient-1)
	(epa-mail-expand-recipients-2, epa-mail-expand-recipients):
	Remove.

2011-08-16  Feng Li <fengli@gmail.com> (tiny change)

	* calc/calc-ext.el (math-defintegral-2): Remove nested backquote.

2011-08-16  Alan Mackenzie  <acm@muc.de>
